@@ -1,0 +1,6 @@
+cat
+a and apple
+b and bat
+d and dog
+c and cat
+%(a => 'apple', d => 'dog', c => 'cat')
