@@ -1,0 +1,1 @@
+java.awt.Point[x=33,y=45]
