@@ -1,0 +1,5 @@
+import java.awt.Point;
+
+$p = [new Point];
+setField($p, x => 33, y => 45);
+println($p);
